# Archaion

./: .dockerignore  .env.example  .env.template  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  agentic_workflow.md  agents_responsibility_matrix.md  architecture.md  docker-compose.yml  mcp.json  mcp_client_test.py  playbook.md  pyproject.toml  requirements.txt  run_local.py  setup_windows.ps1
amplify/functions/modernization-handler/: handler.py  requirements.txt  resource.ts
app/agents/: agents.yaml
app/agents/config/: agents.yaml  tasks.yaml  tools.yaml
app/backend/: crew.py  handler.py  main.py  redis_manager.py  requirements.txt
app/flows/: modernization_flow.py
app/frontend/: index.html  main.js  style.css
app/tasks/: tasks.yaml
app/tools/: document_generator.py  docx_postprocess.py  mcp_tools.py  searchapi_tool.py  serper_tool.py
scripts/: clean_workspace.py
src/: index.html  main.js
