[project]
name = "archaion_analyzer"
version = "2.1.0"
description = "The Agentic Modernization platform powered by CAST Imaging MCP"
authors = [
    { name = "Abhishek Sinha", email = "iam@theabhisheksinha.com" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.31.1",
    "pydantic==2.11.4",
    "litellm==1.65.5",
    "httpx==0.27.2",
    "sse-starlette==2.0.0",
    "mcp==1.27.0",
    "python-docx==1.1.0",
    "python-dotenv==1.0.1",
    "crewai==0.30.11",
    "setuptools==80.10.2",
    "PyYAML==6.0.2",
    "redis==5.0.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
